<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lvlUp">Level Up</string>
    <string name="nick">Harry Potter</string>
    <string name="lvl">Level 1</string>
    <string name="app_name">Beer Wizard</string>
    <string name="user_name_default">Change me!</string>

    <string name="title_activity_room_create">Create Room</string>
    <string name="create_room_hint">Room Name</string>
    <string name="create_room_button">Create Room</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="title_activity_cast_spell">Cast Spell</string>


    <string name="rule">No Rule has been set yet</string>
    <!-- Intro Strings-->
    <string name="lbl_tap_to_begin">Tap to beergin!</string>

    <!-- Splash Screen-->
    <string name="splash_screen_activity">SplashScreen</string>
    <!-- Main Menu Strings (popup also included)-->
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="lbl_available_rooms">Available Rooms</string>
    <string name="btn_new_game">Play</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_tutorial">Tutorial</string>
    <string name="btn_about">About</string>
    <string-array name="str_array_available_rooms">
        <item>Room 1</item>
        <item>Room 2</item>
        <item>Room 3</item>
        <item>Room 4</item>
        <item>Room 5</item>
        <item>Room 6</item>
    </string-array>

    <!-- Popup Strings -->
    <string name="main_menu_popup_about">About us</string>
    <string name="main_menu_popup_done">Done by:</string>
    <string name="main_menu_popup_names_1">Christian Soler, Jordi Olivares</string>
    <string name="main_menu_popup_names_2">Nico Forteza and Alberto Leiva</string>
    <string name="main_menu_popup_btn_dismiss">Back</string>
    <!--END Main Menu Strings-->


    <!-- Cast Spell testing data (popup also included) -->
    <string-array name="str_wizards_test_data">
        <item>Harri Potter</item>
        <item>Ron Whisky</item>
        <item>Ginebra Wheasly</item>
        <item>Several Snapple</item>
        <item>Eh Mion</item>
    </string-array>
    <string name="description_text">Description</string>
    <string name="description_quote">Quote</string>
    <!--Popup Strings -->
    <string name="cast_spell_popup_spell_name">SPELL_NAME</string>
    <string name="cast_spell_popup_spell_intro">Are you sure want to cast SPELL_NAME?</string>
    <string name="cast_spell_popup_spell_user">Select user to cast spell?</string>
    <string name="cast_spell_popup_btn_yes">YES</string>
    <string name="cast_spell_popup_btn_no">NO</string>
    <!-- END Cast Spell testing data -->

    <!-- Profile Strings -->
    <string name="btn_profile_ok">Ok</string>
    <string name="title_activity_avatar_chooser">Choose Avatar</string>
    <string name="choose_avatar_text">Choose your Avatar</string>

    <string name="title_activity_intro">IntroActivity</string>


    <!-- Settings names-->
    <string name="action_profile">Profile</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_exit">Exit Game</string>
    <string name="action_settings">Settings</string>

    <!-- Spells text-->

    <!-- Spell1 text-->
    <string name="lock1">Unlock \n lvl. 2</string>
    <string name="title_spell1">CAN TO
        \n THE FACE</string>
    <string name="description_text_spell1">
        Call out someone of a lower level \nthan you and make them take a drink</string>
    <string name="description_quote_spell1">
        Like Dionysus and Russell Brand in one\n
	    You are now the king of fun\n
	    Don’t feel bad telling people what to do\n
	    No one has more fun than when you tell them to\n
    </string>

    <!-- Spell2 text-->
    <string name="lock2">Unlock \n lvl. 3</string>
    <string name="title_spell2">DUEL OF\n WIZARDS</string>
    <string name="description_text_spell2">
        Challenge someone to a common \ndrinking activity.</string>
    <string name="description_quote_spell2">
        If of a duel you are not sure\n
        Alcohol’s the perfect cure</string>

    <!-- Spell3 text-->
    <string name="lock3">Unlock \n lvl. 4</string>
    <string name="title_spell3">BEER-\nEKINESIS</string>
    <string name="description_text_spell3">
        Retrieve a beer through Magic, ie,\nmaking someone get you a beer</string>
    <string name="description_quote_spell3">
        If you cannot read this spell\n
        This game is working far too well</string>

    <!-- Spell4 text-->
    <string name="lock4">Unlock \n lvl. 5</string>
    <string name="title_spell4">SHIELD</string>
    <string name="description_text_spell4">
        You are protected from the next spell</string>
    <string name="description_quote_spell4">
        Shouldst thou be in an ikea,\n
        This game probably is not a great idea…</string>

    <!-- Spell5 text-->
    <string name="lock5">Unlock \n lvl. 6</string>
    <string name="title_spell5">RULE</string>
    <string name="description_text_spell5">
        When you reach this level, create a\n rule that all must follow under penalty\nof drinking.</string>
    <string name="description_quote_spell5">
        Now you’re less inhibited\nit’s time to get creative\n
        It’s you who gets to make the rules\n
        Just don’t let your ideas run away\nfrom yofhdgseules.</string>

    <!-- Spell6 text-->
    <string name="lock6">Unlock \n lvl. 7</string>
    <string name="title_spell6">TRUTH OR \n SHOT</string>
    <string name="description_text_spell6">
        You can ask your target a question that\nneeds to be answered; in case your buddy\'s\na pussy he s gotta drink a shot.</string>
    <string name="description_quote_spell6">
        The only way to lift the curse\n
        Is tell the truth (preferably in verse)\n
        If you’d rather not face your personal life at all\n
        Bury your problems with more alcohol</string>

    <!-- Spell7 text-->
    <string name="lock7">Unlock \n lvl. 8</string>
    <string name="title_spell7">HAT OF\n SHAME</string>
    <string name="description_text_spell7">
        Humiliate a Wizard by forcing them to\n wear a humorous headpiece for\nyour enjoyment.</string>
    <string name="description_quote_spell7">
        To defeat your enemies, here’s a clue\n
        Don’t rely on Spells, or foul brew\n
        Curses, Poxes, Eye of cat\n
        Nothing compares to a dumb-looking hat</string>

    <!-- Spell8 text-->
    <string name="lock8">Unlock \n lvl. 9</string>
    <string name="title_spell8">ALL\n IN BEER</string>
    <string name="description_text_spell8">
        Make everyone drink a beer.</string>
    <string name="description_quote_spell8">
        One can to rule them all,\n
        One can to find them,\n
        One can to bring them all\n
        Home with a designated driver.
    </string>


    <!-- Tutorial Strings (popup also included) -->

    <string name="tutorial_btn_next">Next</string>
    <string name="tutorial_btn_previous">Previous</string>

    <!-- Popup Strings-->
    <string name="tutorial_popup_congrats">Congratulations!</string>
    <string name="tutorial_popup_ended">You\'ve finished the tutorial</string>
    <string name="tutorial_popup_return">Want to return?</string>
    <string name="tutorial_popup_btn_yes">YES</string>
    <string name="tutorial_popup_btn_no">NO</string>


    <!-- Level Up popup -->
    <string name="level_up_popup_not">Hey!</string>
    <string name="level_up_popup_name">%1$s wants to level up</string>
    <string name="level_up_popup_allow">Allow him to do it? </string>
    <!-- END Level Up popup -->

    <!-- Level Up Boss -->
    <string name="level_up_boss_popup_not">Hey!</string>
    <string name="level_up_boss_popup_bossname">You must defeat BOSS_NAME before level Up</string>
    <string name="level_up_boss_popup_eff">You are the one who can do it!</string>
    <string name="level_up_boss_popup_btn_fight">FIGHT!</string>
    <string name="title_activity_cast_spell2">CastSpell2Activity</string>
    <!-- END Level Up Boss -->

    <!-- popup Received spell -->
    <string name="popup_received_spell_not">Hey!</string>
    <string name="popup_received_spell_user_spell">%1$s sent you a %2$s</string>
    <string name="popup_received_spell_descr">Now you must %1$s</string>
    <string name="popup_received_spell_btn"> Beer it!</string>
    <!-- short description spell-->
    <string name="short_desc_can">Take your beer!</string>
    <string name="short_desc_duel">Be ready to face him a duel!</string>
    <string name="short_desc_beerk">Take him a beer</string>
    <string name="short_desc_hat">Take something and is your new hat!</string>
    <string name="short_desc_truth">TRUTH OR SHOT?</string>
    <string name="short_desc_all">DRINK,DRINK,DRINK!!!</string>

    <!-- Profile layout texts-->
    <string name="profile_info_pic">Tap to change your avatar</string>
    <string name="profile_change_name">Set your profile name</string>

    <!-- popup_duel texts-->
    <string name="duel_info">Who won the duel?</string>
    <string name="duel_what">Now you must %1$s</string>
    <string name="duel_user1">%1$s</string>
    <string name="duel_user2">%1$s</string>

    <!--Toast hechizo send-->
    <string name="toast_sent">Spell casted.</string>
    <string name="toast_updated_rule">Rule updated.</string>

    <!--Notification texts -->
    <string name="notification_decide_level">%1$s requested a Level Up from You!</string>
    <string name="notification_cast_spell">%1$s casted %1$s on You!</string>
    <string name="notification_update_rule">New Rule in Game!</string>
    <string name="notification_decide_duel">%1$s and %2$s had a duel, who won? you judge!</string>
    <string name="notification_level_up">You drank a potion and gained a level!</string>
    <string name="notification_level_down">You lost a duel and a level with it :(</string>
    <string name="notification_default">Something happened in Beer Wizard!</string>
</resources>