<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.12"
    android:background="@drawable/popup_border"
    android:clickable="true"
    android:orientation="vertical">

    <TableRow>

        <TextView
            android:gravity="center"
            android:text="@string/main_menu_popup_about" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_menu_popup_names_1" />
    </TableRow>

    <TableRow>

        <TextView
            android:gravity="center"
            android:text="@string/main_menu_popup_names_2" />
    </TableRow>

    <TableRow>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:onClick="onClick_newGame"
            android:text="@string/main_menu_popup_btn_dismiss" />
    </TableRow>

</TableLayout>
