<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.12"
    android:background="@drawable/popup_border"
    android:orientation="vertical">

    <TableRow>

        <TextView
            android:gravity="center"
            android:text="@string/cast_spell_popup_spell_name" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cast_spell_popup_spell_intro" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn_cast_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:onClick="onClick_newGame"
            android:text="@string/cast_spell_popup_btn_yes" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn_NO_cast_spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:onClick="onClick_newGame"
            android:text="@string/cast_spell_popup_btn_no" />
    </TableRow>

</TableLayout>